fixed extra scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2930,7 +2930,8 @@
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 		height: 100vh;
-		overflow-y: auto;
+		overflow-y: hidden;
+		height:auto;
 	}
 	#artists {
 		background: url("images/overlay.png"), url("../../images/artist1.jpg");
@@ -2938,7 +2939,8 @@
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 		height: 100vh;
-    	overflow-y: auto;
+    	overflow-y: hidden;
+		height:auto;
 	}
 	#work {
 		background: url("images/overlay.png"), url("../../images/gallery_back.jpg");
